# Aegis

./: .gitignore  ARCHITECTURE.md  ARTICLE_DEVTO.md  CORE.md  Cargo.toml  PROJECT_NEXUS_DEFINITION.md  README.md  implementation_plan.md  task.md
config/: claude_desktop_config.json  nexus.development.json  nexus.production.json  nexus.with-plugins.json
docs/: API.md  ARCHITECTURE.md  CLAUDE_INTEGRATION.md  CONFIGURATION.md  GIT.md  GUIDE.md  LLM.md  NOTIFICATIONS.md  PLUGINS.md  QUICKSTART.md  README.md  ROADMAP.md  TOOLS.md  VISION.md  WORKFLOWS.md
examples/: agent_memory.py  file_operations.py  hello_nexus.py  mcp_client.py  simple_agent.py
sdk/python/: nexus_client.py  setup.py
src/: lib.rs  main.rs
src/core/: config.rs  errors.rs  mod.rs  state.rs
src/dashboard/: mod.rs
src/handlers/: initialize.rs  mod.rs  ping.rs  prompts.rs  resources.rs  router.rs  tools.rs  tools_call.rs
src/memory/: mod.rs  schema.rs  sqlite.rs  store.rs
src/protocol/: jsonrpc.rs  mcp.rs  mod.rs
src/scheduler/: mod.rs
src/secrets/: mod.rs
src/tools/: mod.rs  process_manager.rs  registry.rs
src/tools/builtin/: cmd_exec.rs  conversation.rs  echo.rs  env.rs  fs_read.rs  fs_write.rs  get_time.rs  git.rs  http_request.rs  llm.rs  memory.rs  mod.rs  scheduler.rs  script_tool.rs  secrets.rs  utils.rs  vector.rs  web.rs  webhook.rs
src/tools/core/: echo.rs  env.rs  fs_read.rs  fs_write.rs  get_time.rs  http_request.rs  mod.rs  utils.rs
src/tools/extras/: conversation.rs  git.rs  llm.rs  mod.rs  notify.rs  secrets.rs  vector.rs  web.rs  workflow.rs
src/transport/: middleware.rs  mod.rs  sse.rs  stdio.rs  transport.rs
