[package]
name = "aegis"
version = "0.3.0"
authors = ["Saeed Valipour Alam <svalam88@gmail.com>"]
edition = "2021"
description = "Aegis: MCP Tool Server for AI Agents"
license = "MIT"
repository = "https://github.com/saeedalam/aegis"
keywords = ["mcp", "ai", "agent", "llm", "tools"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# Web Server (for SSE transport)
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "request-id"] }
headers = "0.4"
http = "1.0"

# HTTP Client (for http.request tool)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4.0", features = ["derive"] }
colored = "2"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error Handling
thiserror = "1.0"

# Async Traits
async-trait = "0.1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
parking_lot = "0.12"
base64 = "0.22"
regex = "1"
sha2 = "0.10"
hex = "0.4"
url = "2"
urlencoding = "2"
hostname = "0.3"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Rate limiting
governor = "0.6"
dashmap = "5"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true

